[tool.poetry]
name = "web-task-6"
version = "0.1.0"
description = ""
authors = ["Vladyslav Chaban <dma.employee.v@gmail.com>"]
readme = "README.md"
packages = [{include = "web_task_6"}]

[tool.poetry.dependencies]
python = "^3.10"
faker = "^17.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
